# mycobot_320_moveit

./: CMakeLists.txt  README.md  package.xml
action/: Move.action
config/: firefighter.srdf
mycobot_320_moveit/action/: MoveHome.action  MultiMove.action
mycobot_320_moveit/launch/: moveit.rviz
mycobot_320_moveit/scripts/: move_action_server.py  move_client.py
